--- a/lib/vocial_web/templates/user/form.html.eex
+++ b/lib/vocial_web/templates/user/form.html.eex
@@ -2,15 +2,19 @@
 <%= form_for @user, user_path(@conn, :create), fn f ->  %>
   <%= label f, :username, "Username:" %>
   <%= text_input f, :username %>
+  <%= error_tag f, :username %>
   <br />
   <%= label f, :eamil, "Email:" %>
   <%= text_input f, :email %>
+  <%= error_tag f, :email%>
   <br />
   <%= label f, :password, "Password: "%>
   <%= password_input f, :password %>
+  <%= error_tag f, :password %>
   <br />
   <%= label f, :password_confirmation, "Confirm your password:" %>
   <%= password_input f, :password_confirmation %>
+  <%= error_tag f, :password_confirmation %>
   
   <%= submit "Sign Up" %>
 <% end %>
