--- a/lib/vocial_web/templates/poll/new.html.eex
+++ b/lib/vocial_web/templates/poll/new.html.eex
@@ -1,14 +1,31 @@
 <div class="poll-form">
   <h2>New Poll</h2>
-  <%= form_for @poll, poll_path(@conn, :create), fn f ->  %>
+  <%= form_for @poll, poll_path(@conn, :create), [multipart: true], fn f ->  %>
     <label>
       Title: <br />
       <%= text_input f , :title %>      
     </label>
+    <br />
     <label>
       Options (seperated by commas): <br />
       <input type="text" name="options" />
     </label>
+    <br />
+    <label>
+      Poll Images: 
+      <%= file_input f, :image %>
+    </label>
+    <br />
+    <label>
+      Image Caption: <br />
+      <input type="text" name="image_data[caption]" />
+    </label>
+    <br />
+    <label>
+      Image Alt Text: <br />
+      <input type="text" name="image_data[alt_text]" />
+    </label>
+    <br />
     <%= submit "Create" %>
   <% end %>
 </div>
