--- a/lib/vocial_web/templates/layout/app.html.eex
+++ b/lib/vocial_web/templates/layout/app.html.eex
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <meta name="remote_ip" content="<%= @conn.remote_ip |> Tuple.to_list() |> Enum.join(".") %>">
     <title>Vocial - The Social Voting App!</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
