--- a/lib/vocial_web/templates/layout/app.html.eex
+++ b/lib/vocial_web/templates/layout/app.html.eex
@@ -14,10 +14,8 @@
 
   <body>
     <div class="container">
-      <header class="header">
-        <span class="logo"></span>
-      </header>
-
+      <%= render "_nav.html" %>
+      
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
 
