--- a/lib/vocial_web/templates/poll/show.html.eex
+++ b/lib/vocial_web/templates/poll/show.html.eex
@@ -1,4 +1,6 @@
-<%= render("_poll.html", %{poll: @poll}) %>
+<%= render("_poll.html", %{poll: @poll, conn: @conn}) %>
 
 <i id="enable-polls-channel" data-poll-id="<%= @poll.id %>"></i>
 <button id="polls-ping" class="btn btn-primary">Ping Websocket</button>
+
+<%= render(VocialWeb.SharedView, "_chat.html") %>
