--- a/lib/vocial_web/templates/poll/show.html.eex
+++ b/lib/vocial_web/templates/poll/show.html.eex
@@ -3,4 +3,4 @@
 <i id="enable-polls-channel" data-poll-id="<%= @poll.id %>"></i>
 <button id="polls-ping" class="btn btn-primary">Ping Websocket</button>
 
-<%= render(VocialWeb.SharedView, "_chat.html") %>
+<%= render(VocialWeb.SharedView, "_chat.html", messages: @poll.messages, chatroom: @poll.id) %>
