--- a/lib/vocial_web/templates/layout/_nav.html.eex
+++ b/lib/vocial_web/templates/layout/_nav.html.eex
@@ -5,7 +5,11 @@
        </div>
        <ul class="nav navbar-nav navbar-right">
          <li><a href="/polls">Polls</a></li>
-         <li><a href="/login">Login</a></li>
+         <%= if user = Plug.Conn.get_session(@conn, :user) do  %>
+          <li><%= link "Welcom #{user.username}", to: user_path(@conn, :show, user.id) %><li>
+         <% else %>
+          <li><a href="/login">Login</a></li>         
+         <% end %>
       </ul> 
     </div>
 </nav>
